@@ -27,6 +27,10 @@ Changes since version 3.5.0
 General Changes
 ===============
 
+- Fixed bug in IceGrid::Query::findAllReplicas implementation which
+  could cause a crash when trying to find the proxies of an empty
+  replica group.
+ 
 - Added support for SOCKSv4 proxies to the Ice core in C++, C# and
   Java. This allows outgoing TCP & SSL connections using IPv4 to be
   mediated by a network proxy service.
